# fixtools

./: .gitignore  CMakeLists.txt  Dockerfile.ubuntu  README.md  build_clang.sh  clang_toolchain.cmake
.github/workflows/: build_ubuntu_clang.yml
fixcat/: CMakeLists.txt  main.cpp  options.cpp  options.hpp
fixsed/: CMakeLists.txt  main.cpp  options.cpp  options.hpp  pipeline.cpp  pipeline.hpp
libschema/: CMakeLists.txt
libutility/: CMakeLists.txt  print_fix_message.cpp  print_fix_message.hpp  read_file.cpp  read_file.hpp
libutility_tests/: CMakeLists.txt  read_file_tests.cpp
schema/: CMakeLists.txt
